--- a/deploy/server-sftp.local.yaml
+++ b/deploy/server-sftp.local.yaml
@@ -5,7 +5,8 @@ services:
         container_name: server-sftp
         ports:
             - "${ENV_LOCAL_SFTP_PORT}:22"
-        command: ${ENV_LOCAL_SFTP_USER}:${ENV_LOCAL_SFTP_PASSWORD}:::../${ENV_LOCAL_SFTP_USER}
+        command:
+            ${ENV_LOCAL_SFTP_USER}:${ENV_LOCAL_SFTP_PASSWORD}:::../${ENV_LOCAL_SFTP_USER}
         volumes:
             - ../server_sftp:${ENV_LOCAL_SFTP_CONTAINER_PATH_FOLDER}
         networks:
